# rudder-sdk-rust

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  release-please-config.json  rust-toolchain.toml
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  publish.yml  release-please.yml
examples/: sample1.rs  sample_one.rs  sample_two.rs
scripts/: validate-release-tag.sh
src/: batcher.rs  client.rs  config.rs  errors.rs  http.rs  lib.rs  main.rs  message.rs  methods.rs  retry.rs  rudder.rs  ruddermessage.rs  utils.rs
tests/: events.rs  retry.rs
