[package]
name = "rudderanalytics"
version = "1.0.1"
edition = "2018"
readme = "README.md"
description = "The RudderStack Rust SDK is an analytics client to track events from your Rust application"
license = "MIT"
keywords = ["rudder","rudderanalytics","analytics","rust","rudderstack"]
repository = "https://github.com/rudderlabs/rudder-sdk-rust"

[[bin]]
name = "rudderanalytics"
path = "src/main.rs"
required-features = ["cli"]

[dependencies]
failure = "0.1.5"
reqwest = {version = "0.9", default-features = false}
serde_json = "1.0.39"
log = "0.4.14"
env_logger = "0.9.0"

[dependencies.chrono]
features = ["serde"]
version = "0.4.6"

[dependencies.clap]
optional = true
version = "2.33"

[dependencies.serde]
features = ["derive"]
version = "1.0.93"

[features]
default = ["default-tls"]
cli = ["clap"]
default-tls = ["reqwest/default-tls"]
rustls-tls = ["reqwest/rustls-tls"]
