[package]
name = "grafbase-rudderstack"
version = "1.1.2"
edition = "2021"
readme = "README.md"
description = "The RudderStack Rust SDK is an analytics client to track events from your Rust application"
license = "MIT"
repository = "https://github.com/grafbase/grafbase-rudderstack"


[dependencies]
failure = "0.1"
reqwest = { version = "0.11", default-features = false, features = [
    'json',
    'blocking',
] }
serde_json = "1.0"
log = "0.4"
env_logger = "0.10"

[dependencies.chrono]
features = ["serde"]
version = "0.4"

[dependencies.serde]
features = ["derive"]
version = "1.0"

[features]
default = ["default-tls"]
default-tls = ["reqwest/default-tls"]
rustls-tls = ["reqwest/rustls-tls"]
