[package]
name = "rudderanalytics"
version = "1.1.3"
edition = "2018"
readme = "README.md"
description = "The RudderStack Rust SDK is an analytics client to track events from your Rust application"
license = "MIT"
keywords = ["rudder","rudderanalytics","analytics","rust","rudderstack"]
repository = "https://github.com/rudderlabs/rudder-sdk-rust"

[[bin]]
name = "rudderanalytics"
path = "src/main.rs"
required-features = ["cli"]

[dependencies]
thiserror = "1.0"
reqwest = { version = "0.11", default-features = false, features=['json', 'blocking']}
serde_json = "1.0"
log = "0.4"
env_logger = "0.10.1"

[dependencies.chrono]
features = ["serde"]
version = "0.4"

[dependencies.clap]
optional = true
version = "3.2"

[dependencies.serde]
features = ["derive"]
version = "1.0"

[features]
default = ["default-tls"]
cli = ["clap"]
default-tls = ["reqwest/default-tls"]
rustls-tls = ["reqwest/rustls-tls"]
